--- a/index.html
+++ b/index.html
@@ -5,55 +5,44 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="styles/main.css">
-
+  <script
+    src="https://code.jquery.com/jquery-3.3.1.min.js"
+    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    crossorigin="anonymous">
+  </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/5.4.0/math.js"></script>
   <title>Calculator</title>
 </head>
 
 <body>
+    <div class="calculator">
+      <div class="calculator__display">0</div>
 
-  <div class="calculator">
-    <p id="title">
-      H E L L O
-    </p>
-    <p id="tagline">
-      electronic calculator
-    </p>
-   
-    <input id="display" type="text" name="screen" id="answer">
+      <div class="calculator__keys">
+        <button class="key--operator" data-action="+">+</button>
+        <button class="key--operator" data-action="-">-</button>
+        <button class="key--operator" data-action="*">x</button>
+        <button class="key--operator" data-action="%">÷</button>
 
-    <div class="keys">
-    <div class="row">
-      <button class="ctrl" class="button clear">AC</button>
-      <button class="ctrl">CE</button>
-      <button id="percentage">%</button>
-      <button id="divide">/</button>
+        <button class="key--operand" data-number=7>7</button>
+        <button class="key--operand" data-number=8>8</button>
+        <button class="key--operand" data-number=9>9</button>
+        <button class="key--operand" data-number=4>4</button>
+        <button class="key--operand" data-number=7>5</button>
+        <button class="key--operand" data-number=6>6</button>
+        <button class="key--operand" data-number=1>1</button>
+        <button class="key--operand" data-number=2>2</button>
+        <button class="key--operand" data-number=3>3</button>
+        <button class="key--operand" data-number=0>0</button>
+
+        <button data-action=".">.</button>
+        <button class="clear" data-action="clear">AC</button>
+        <button class="key--equal" data-action="calculate">=</button>
+      </div>
     </div>
-    <div class="row">
-      <button id="seven">7</button>
-      <button id="eight">8</button>
-      <button id="nine">9</button>
-      <button id="multiply">x</button>
-    </div>
-    <div class="row">
-      <button id="4">4</button>
-      <button id="5">5</button>
-      <button id="six">6</button>
-      <button id="subtract">-</button>
-    </div>
-    <div class="row">
-      <button id="one">1</button>
-      <button id="two">2</button>
-      <button id="three">3</button>
-      <button class="tall" id="add">+</button>
-    </div>        
-    <div class="row">
-      <button id="zero">0</button>
-      <button id="decimal">.</button>
-      <button id="equals">=</button>
-    </div>
-    </div>        
   </div>
-  
+
+  <script src="logic.js" type="text/javascript"></script>
   
 </body>
 </html>
