--- a/index.html
+++ b/index.html
@@ -5,13 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="styles/main.css">
-  <script
-    src="https://code.jquery.com/jquery-3.3.1.min.js"
-    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-    crossorigin="anonymous">
-  </script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/5.4.0/math.js"></script>
   <title>Calculator</title>
+  <link rel="icon" href="./images/icons8-calculator-48.png"/>
 </head>
 
 <body>
@@ -22,7 +17,7 @@
         <button class="key--operator" data-action="+">+</button>
         <button class="key--operator" data-action="-">-</button>
         <button class="key--operator" data-action="*">x</button>
-        <button class="key--operator" data-action="%">÷</button>
+        <button class="key--operator" data-action="/">÷</button>
 
         <button class="key--operand" data-number=7>7</button>
         <button class="key--operand" data-number=8>8</button>
@@ -35,14 +30,26 @@
         <button class="key--operand" data-number=3>3</button>
         <button class="key--operand" data-number=0>0</button>
 
-        <button data-action=".">.</button>
+        <button class="key--operator" id="decimal" data-action=".">.</button>
         <button class="clear" data-action="clear">AC</button>
         <button class="key--equal" data-action="calculate">=</button>
       </div>
     </div>
   </div>
 
-  <script src="logic.js" type="text/javascript"></script>
+  <!-- Scripts -->
+  <script
+    src="https://code.jquery.com/jquery-3.3.1.min.js"
+    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    crossorigin="anonymous">
+  </script>
+  <script 
+    src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/5.4.0/math.js">
+  </script>
+  <script 
+    src="logic.js" 
+    type="text/javascript">
+  </script>
   
 </body>
 </html>
