--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
   <link rel="stylesheet" href="styles/main.css">
   <title>Calculator</title>
   <link rel="icon" href="./images/icons8-calculator-48.png"/>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 </head>
 
 <body>
     <div class="calculator">
-      <div class="calculator__display">0</div>
+      <div class="calculator__display"><i class="far fa-heart"></i> h e l l o</i></div>
 
       <div class="calculator__keys">
         <button class="key--operator" data-action="+">+</button>
