--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
 <body>
     <div class="calculator">
-      <div class="calculator__display"><i class="far fa-heart"></i> h e l l o</i></div>
-
+      <div class="calculator__display"><i class="far fa-heart"></i></i></div>
+      
       <div class="calculator__keys">
         <button class="key--operator" data-action="+">+</button>
         <button class="key--operator" data-action="-">-</button>
@@ -51,6 +51,5 @@
     src="logic.js" 
     type="text/javascript">
   </script>
-  
 </body>
 </html>
